<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:minHeight="48dp"
        android:id="@+id/spinnerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline"
        android:inputType="date"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"/>

    <Button
        android:id="@+id/btnSelectFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/SelectFile"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:enabled="false"
        android:layout_margin="5dp"
        android:id="@+id/etFilePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/path_to_file"
        android:inputType="date"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"/>

    <Button
        android:id="@+id/btnEditBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/EditTask"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
