<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize"/>

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize"/>

    <Button
        app:cornerRadius="1dp"
        android:textStyle="bold"
        android:backgroundTint="#007bff"
        android:layout_margin="5dp"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/registeredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_register"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>